	* include/mb_reporting.h: Added macros to print error and warning 
	   messages when --enable-warnings is used during ./configure
	* include/mb_reporting.h: Added macros to print info messages when
	  --enable-verbose is used during ./configure. --enable-verbose also
	  implies --enable-warnings which prints out error and warning messages
	  

2009-05-08 Lee-Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* m4/acx_pthread.m4, m4/check_parallel.m4: Added support pthreads-win32.
	  Necessary when compiling on Windows using MinGW/MSYS (Cygwin has built-
	  in support for pthreads)
	  
	* Makefile.am: Disable automatic running of test after "make test"
	
	* configure.ac, m4/check_coverage, Makefile.am: Added support for coverage 
	  testing. Enabled using --enable-coverage. Executed using "make coverage"
	* src/utils/compile_coverage.sh: Added script to gather coverage data into
	  HTML report using LCOV 
	
	* include/mb_commqueue.h, src/parallel/util_commqueue.c: CommQueue now
	  uses a bi-directional list instead of uthash.h
	* src/utils/memlog.c: Replaced uthash usage with khash
	* include/uthash.h: Removed from distribution
	  
	* include/sqlite3.h, src/utils/sqlite3.c: Upgraded SQLite to version 3.6.14
	
	* README.in: Replaced stubs with actual information :)

	* : Tagged as 0.1.6
	
2008-11-21  Lee-Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* src/utils/pooled_list.c: Fixed critical bug in randomisation routine.

	* : Tagged as 0.1.5.2-beta

2008-11-14  Lee-Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* : Memory logging implemented. Activated using --enable-memlog.
	* include/sqlite3.h, src/utils/sqlite3.c: Added sqlite3 files for storing
	  memory usage.
	* configure.ac, Makefile.am, src/utils/Makefile.am: sqlite3 built into 
	  binaries if Memory Logging is enabled.
	* src/progs/mboard-parse-memlogdb: Added program to generate graphs from 
	  memlog output. Installed when source configured with --enable-memlog
