@@ -124,6 +124,8 @@ void test_mb_p_sync_checkcontent(void);
 void test_mb_p_sync_withfilter(void);
 void test_mb_p_sync_withfilter_fdr(void);
 void test_mb_p_sync_indexmap(void);
+void test_mb_p_sync_resync(void);
+void test_mb_p_sync_resync_filtered(void);
 
 /* testing index map */
 void test_mb_p_indexmap_create(void);
